# salt-extensions-metadata

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: pypi-packages-exclude.yaml  pypi-packages-include.yaml
requirements/: requirements-dev.txt  requirements.txt
scripts/: query-pypi.py  refresh-metadata.py
